# nyc-taxi-analytics-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
airflow/dags/: batch_analytics.py  data_quality_checks.py  ingest_monthly_data.py
docker/airflow/: Dockerfile  requirements.txt
docker/api/: Dockerfile  requirements.txt
docker/frontend/: Dockerfile  nginx.conf
docker/hadoop/: Dockerfile
docker/hadoop/config/: capacity-scheduler.xml  core-site.xml  hdfs-site.xml  mapred-site.xml  yarn-site.xml
docker/kafka-producer/: Dockerfile
docker/postgres/: init.sql
docker/spark/: Dockerfile
docs/: architecture.md  architecture.mermaid  cloud-deployment-guide.md  data-dictionary.md  design-decisions.md
infra/aws/: main.tf  outputs.tf  variables.tf
infra/gcp/: main.tf  outputs.tf  variables.tf
scripts/: ingest-to-hdfs.sh  load-zone-lookup.sh  run-kafka-producer.sh  submit-hadoop-job.sh  submit-spark-job.sh
src/: __init__.py
src/api/: __init__.py  config.py  db.py  main.py
src/frontend/: index.html  package.json
src/hadoop/: __init__.py  mapper_fare_analysis.py  mapper_zone_aggregation.py  reducer_fare_analysis.py  reducer_zone_aggregation.py
src/ingestion/: download_tlc_data.py  upload_to_hdfs.py  validate_data.py
src/kafka/: __init__.py  producer.py  schemas.py
src/spark/: __init__.py  schemas.py
tests/: test_api.py  test_ingestion.py  test_mappers.py  test_reducers.py  test_spark_jobs.py
(+50 files in other folders)
